Fix poly-shapefile readin to produce integer names and to use global default resolution.